tests/snapshots/snapshots__pipeline@param_eff_mismatch.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/param_eff_mismatch.pr
---
== tokens ==
VOpen Effect UIdent("Emit") LParen Ident("a") RParen LBrace Ctl Ident("emit") LParen Ident("a") RParen Colon KwUnit RBrace VSemi Fn Ident("ints") LParen RParen Colon Bang LBrace UIdent("Emit") LParen KwInt RParen RBrace KwUnit Eq Ident("emit") LParen Int(IntLit { value: 1, suffix: None }) RParen VSemi Fn Ident("strs") LParen RParen Colon Bang LBrace UIdent("Emit") LParen KwString RParen RBrace KwUnit Eq Ident("emit") LParen StringLit("x") RParen VSemi Fn Ident("both") LParen RParen Colon Bang LBrace UIdent("Emit") LParen KwInt RParen RBrace KwUnit Eq VOpen Ident("ints") LParen RParen VSemi Ident("strs") LParen RParen VClose VSemi Fn Ident("main") LParen RParen Eq LParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Emit",
            params: [
                "a",
            ],
            ops: [
                EffOp {
                    name: "emit",
                    params: [
                        Var(
                            "a",
                        ),
                    ],
                    ret: Unit,
                },
            ],
            span: 0..39,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "ints",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Int,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 73..77,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 1,
                                    suffix: None,
                                },
                            ),
                            span: 78..79,
                        },
                    ],
                ),
                span: 73..80,
            },
            wheres: [],
            span: 41..80,
        },
        Decl {
            name: "strs",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Str,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "emit",
                        ),
                        span: 117..121,
                    },
                    [
                        Spanned {
                            node: Str(
                                "x",
                            ),
                            span: 122..125,
                        },
                    ],
                ),
                span: 117..126,
            },
            wheres: [],
            span: 82..126,
        },
        Decl {
            name: "both",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "Emit",
                        args: [
                            Int,
                        ],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Let(
                    "_",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "ints",
                                ),
                                span: 162..166,
                            },
                            [],
                        ),
                        span: 162..168,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "strs",
                                ),
                                span: 171..175,
                            },
                            [],
                        ),
                        span: 171..177,
                    },
                ),
                span: 162..177,
            },
            wheres: [],
            span: 128..177,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Unit,
                span: 191..193,
            },
            wheres: [],
            span: 179..193,
        },
    ],
}

== types ==
Type Error: in `both`: effect instantiation mismatch: `Emit(String)` is not compatible with `Emit(Int)`
    ╭─[ <source>:11:3 ]
    │
 11 │   strs()
    │   ───┬──  
    │      ╰──── in `both`: effect instantiation mismatch: `Emit(String)` is not compatible with `Emit(Int)`
────╯
